--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -113,6 +113,7 @@
 
             .language {
                 display: flex;
+                position: relative;
                 justify-content: center;
 
                 .lang_title {
@@ -129,6 +130,34 @@
                         @media (max-width:767px) {
                             max-width: 3vw;
                             min-width: 3vw;
+                        }
+                    }
+                }
+
+                .lang_menu {
+                    top: 1.3vw;
+                    z-index: 10;
+                    overflow: hidden;
+                    position: absolute;
+                    background-color: #0B8297;
+                    border: solid 1px #0B8297;
+
+                    @media (max-width:767px) {
+                        top: 4vw;
+                    }
+
+                    .min-text {
+                        color: white;
+                        padding: 0.3vw 1vw;
+
+                        &:hover {
+                            cursor: pointer;
+                            color: #0B8297;
+                            background-color: white;
+                        }
+
+                        @media (max-width:767px) {
+                            padding: 0.7vw 2.5vw;
                         }
                     }
                 }
@@ -162,29 +191,67 @@
             }
         }
 
-        .catalog_btn {
-            border: none;
+        .catalog {
             display: flex;
-            align-items: center;
-            padding: 0.7vw 1.5vw;
-            background-color: #60B0211A;
+            position: relative;
+            justify-content: center;
 
-            @media (max-width:767px) {
-                gap: 4vw;
-                padding: 1.8vw 3vw;
-            }
-
-            .text {
-                color: #0B8297;
-            }
-
-            .icn {
-                max-width: 1.2vw;
-                min-width: 1.2vw;
+            .catalog_btn {
+                border: none;
+                outline: none;
+                display: flex;
+                align-items: center;
+                padding: 0.7vw 1.5vw;
+                background-color: #60B0211A;
 
                 @media (max-width:767px) {
-                    max-width: 3.3vw;
-                    min-width: 3.3vw;
+                    gap: 4vw;
+                    padding: 1.8vw 3vw;
+                }
+
+                .text {
+                    color: #0B8297;
+                }
+
+                .icn {
+                    max-width: 1.2vw;
+                    min-width: 1.2vw;
+
+                    @media (max-width:767px) {
+                        max-width: 3.3vw;
+                        min-width: 3.3vw;
+                    }
+                }
+            }
+
+            .catalog_bar {
+                top: 3.5vw;
+                z-index: 10;
+                width: 200%;
+                display: flex;
+                overflow: auto;
+                max-height: 50vh;
+                position: absolute;
+                flex-direction: column;
+                background-color: #0B8297;
+
+                @media (max-width:767px) {
+                    top: 8.5vw;
+                    max-height: 60vh;
+                }
+
+                .bar_link {
+                    color: white;
+                    padding: 0.5vw 1vw;
+
+                    &:hover {
+                        color: #0B8297;
+                        background-color: white;
+                    }
+
+                    @media (max-width:767px) {
+                        padding: 1.5vw 3vw;
+                    }
                 }
             }
         }
@@ -232,6 +299,37 @@
                     @media (max-width:767px) {
                         max-width: 3.3vw;
                         min-width: 3.3vw;
+                    }
+                }
+            }
+
+            .search_bar {
+                top: 3vw;
+                z-index: 10;
+                width: 100%;
+                display: flex;
+                overflow: auto;
+                max-height: 50vh;
+                position: absolute;
+                flex-direction: column;
+                background-color: #0B8297;
+
+                @media (max-width:767px) {
+                    top: 9vw;
+                    max-height: 60vh;
+                }
+
+                .bar_link {
+                    color: white;
+                    padding: 0.5vw 1vw;
+
+                    &:hover {
+                        color: #0B8297;
+                        background-color: white;
+                    }
+
+                    @media (max-width:767px) {
+                        padding: 1.5vw 3vw;
                     }
                 }
             }
