--- a/src/styles/Contacts.scss
+++ b/src/styles/Contacts.scss
@@ -35,7 +35,7 @@
                         color: white;
                         font-weight: 600;
                         padding: 1vw 1.5vw;
-                        background-color: #0B8297;
+                        background-color: #086e81;
 
                         @media (max-width:767px) {
                             padding: 3vw 4.5vw;
@@ -53,7 +53,7 @@
                         -o-border-radius: 50%;
                         align-items: center;
                         justify-content: center;
-                        background-color: #0b829738;
+                        background-color: #086f8149;
 
                         @media (max-width:767px) {
                             width: 10vw;
@@ -95,7 +95,7 @@
                 border: none;
                 color: white;
                 font-weight: 600;
-                background-color: #0B8297;
+                background-color: #086e81;
             }
         }
     }
