--- a/src/styles/home/HomeCategories.scss
+++ b/src/styles/home/HomeCategories.scss
@@ -10,7 +10,7 @@
             justify-content: space-between;
 
             .text {
-                color: #0B8297;
+                color: #086e81;
                 text-decoration: underline;
             }
         }
