--- a/src/styles/home/HomeNews.scss
+++ b/src/styles/home/HomeNews.scss
@@ -10,7 +10,7 @@
             justify-content: space-between;
 
             .text {
-                color: #0B8297;
+                color: #086e81;
                 text-decoration: underline;
             }
         }
@@ -56,7 +56,7 @@
                     align-items: center;
 
                     .actual {
-                        color: #0B8297;
+                        color: #086e81;
                         padding: 0.5vw 1vw;
                         border-radius: 50px;
                         -webkit-border-radius: 50px;
@@ -101,7 +101,7 @@
                 }
 
                 .link {
-                    color: #0B8297;
+                    color: #086e81;
                     font-weight: 600;
                     text-decoration: underline;
                 }
@@ -144,7 +144,7 @@
                 }
 
                 .link {
-                    color: #0B8297;
+                    color: #086e81;
                     font-weight: 600;
                     text-decoration: underline;
                 }
