--- a/src/styles/other/News.scss
+++ b/src/styles/other/News.scss
@@ -54,7 +54,7 @@
                 }
 
                 .link {
-                    color: #0B8297;
+                    color: #086e81;
                     font-weight: 600;
                     text-decoration: underline;
                 }
