--- a/src/styles/other/ProductItem.scss
+++ b/src/styles/other/ProductItem.scss
@@ -109,7 +109,7 @@
                 .buy_btn {
                     border: none;
                     color: white;
-                    background-color: #0B8297;
+                    background-color: #086e81;
                 }
             }
         }
