--- a/src/styles/home/Partners.scss
+++ b/src/styles/home/Partners.scss
@@ -16,7 +16,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                background-color: #0B8297;
+                background-color: #086e81;
 
                 @media (max-width:767px) {
                     height: 20vw;
