--- a/src/styles/other/Categories.scss
+++ b/src/styles/other/Categories.scss
@@ -47,7 +47,7 @@
                 display: flex;
                 align-items: center;
                 flex-direction: column;
-                background-color: #0B8297;
+                background-color: #086e81;
 
                 .text {
                     width: 100%;
