--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,3 +1,7 @@
+// $primary: #086e81;
+// $primary: #00205B;
+$primary: #0095E9;
+
 .Navbar {
     top: 0;
     left: 0;
@@ -15,7 +19,7 @@
         display: flex;
         padding: 0.8vw 10vw;
         align-items: center;
-        background-color: #086e81;
+        background-color: $primary;
         justify-content: space-between;
 
         @media (max-width:767px) {
@@ -34,7 +38,7 @@
         .bonus_btn {
             border: none;
             font-weight: 600;
-            color: #086e81;
+            color: $primary;
             padding: 0.7vw 1.3vw;
             background-color: white;
 
@@ -107,7 +111,7 @@
             }
 
             .tel {
-                color: #086e81;
+                color: $primary;
                 font-weight: 600;
             }
 
@@ -139,8 +143,8 @@
                     z-index: 10;
                     overflow: hidden;
                     position: absolute;
-                    background-color: #086e81;
-                    border: solid 1px #086e81;
+                    background-color: $primary;
+                    border: solid 1px $primary;
 
                     @media (max-width:767px) {
                         top: 4vw;
@@ -152,7 +156,7 @@
 
                         &:hover {
                             cursor: pointer;
-                            color: #086e81;
+                            color: $primary;
                             background-color: white;
                         }
 
@@ -167,22 +171,23 @@
 
     .bottom_navbar {
         display: flex;
-        padding: 0 10vw;
+        padding: 0.5vw 10vw;
         align-items: center;
         background-color: white;
+        justify-content: space-between;
 
         @media (max-width:767px) {
-            gap: 0 5vw;
+            gap: 2vw 5vw;
             flex-wrap: wrap;
             padding: 1.5vw 5vw;
             justify-content: space-between;
         }
 
         .logo {
-            width: 7vw;
+            width: 15vw;
 
             @media (max-width:767px) {
-                width: 20vw;
+                width: 29vw;
             }
 
             img {
@@ -202,7 +207,7 @@
                 display: flex;
                 align-items: center;
                 padding: 0.7vw 1.5vw;
-                background-color: #086e81;
+                background-color: $primary;
 
                 @media (max-width:767px) {
                     gap: 4vw;
@@ -227,13 +232,13 @@
             .catalog_bar {
                 top: 3.5vw;
                 z-index: 10;
-                width: 200%;
+                width: 230%;
                 display: flex;
                 overflow: auto;
                 max-height: 50vh;
                 position: absolute;
                 flex-direction: column;
-                background-color: #086e81;
+                background-color: $primary;
 
                 @media (max-width:767px) {
                     top: 8.5vw;
@@ -241,16 +246,76 @@
                 }
 
                 .bar_link {
+                    display: flex;
                     color: white;
                     padding: 0.5vw 1vw;
+                    flex-direction: column;
+                    border-bottom: solid 1px rgba(255, 255, 255, 0.328);
 
-                    &:hover {
-                        color: #086e81;
-                        background-color: white;
-                    }
+                    // &:hover {
+                    //     color: $primary;
+                    //     background-color: white;
+                    // }
 
                     @media (max-width:767px) {
                         padding: 1.5vw 3vw;
+                    }
+
+                    .parent {
+                        width: 100%;
+                        display: flex;
+                        cursor: pointer;
+                        align-items: center;
+                        justify-content: space-between;
+
+                        .icn1 {
+                            max-width: 1.2vw;
+                            min-width: 1.2vw;
+                        }
+
+                        .icn2 {
+                            max-width: 0.5vw;
+                            min-width: 0.5vw;
+                            transition: 0.2s;
+                            -webkit-transition: 0.2s;
+                            -moz-transition: 0.2s;
+                            -ms-transition: 0.2s;
+                            -o-transition: 0.2s;
+                            margin-right: 0.5vw;
+                        }
+                    }
+
+                    .childs {
+                        height: 0;
+                        width: 100%;
+                        display: flex;
+                        overflow: hidden;
+                        flex-direction: column;
+
+                        .link {
+                            color: white;
+
+                            &:hover {
+                                color: $primary;
+                                background-color: white;
+                            }
+                        }
+                    }
+                }
+
+                .active_catalog {
+                    .parent {
+                        .icn2 {
+                            transform: rotate(90deg);
+                            -webkit-transform: rotate(90deg);
+                            -moz-transform: rotate(90deg);
+                            -ms-transform: rotate(90deg);
+                            -o-transform: rotate(90deg);
+                        }
+                    }
+
+                    .childs {
+                        height: auto;
                     }
                 }
             }
@@ -290,7 +355,7 @@
                 justify-content: center;
                 border-top-left-radius: 0;
                 border-bottom-left-radius: 0;
-                background-color: #086e81;
+                background-color: $primary;
 
                 .icn {
                     max-width: 1.2vw;
@@ -312,7 +377,7 @@
                 max-height: 50vh;
                 position: absolute;
                 flex-direction: column;
-                background-color: #086e81;
+                background-color: $primary;
 
                 @media (max-width:767px) {
                     top: 9vw;
@@ -324,7 +389,7 @@
                     padding: 0.5vw 1vw;
 
                     &:hover {
-                        color: #086e81;
+                        color: $primary;
                         background-color: white;
                     }
 
@@ -372,7 +437,7 @@
                 -o-border-radius: 50%;
                 align-items: center;
                 justify-content: center;
-                background-color: #086e81;
+                background-color: $primary;
                 font-family: 'Montserrat', sans-serif;
 
                 @media (max-width:767px) {
