--- a/src/styles/other/Categories.scss
+++ b/src/styles/other/Categories.scss
@@ -1,3 +1,7 @@
+// $primary: #086e81;
+// $primary: #00205B;
+$primary: #0095E9;
+
 .Categories {
     .wrapper {
         display: flex;
@@ -47,7 +51,7 @@
                 display: flex;
                 align-items: center;
                 flex-direction: column;
-                background-color: #086e81;
+                background-color: $primary;
 
                 .text {
                     width: 100%;
@@ -77,7 +81,7 @@
                 width: 50%;
             }
 
-            .name{
+            .name {
                 font-weight: 600;
             }
 
