--- a/src/styles/other/FavouriteProducts.scss
+++ b/src/styles/other/FavouriteProducts.scss
@@ -85,6 +85,7 @@
 
                 .desc {
                     opacity: 0.6;
+                    font-weight: 700;
                     overflow: hidden;
                     display: -webkit-box;
                     -webkit-line-clamp: 2;
@@ -100,6 +101,7 @@
                     justify-content: space-between;
 
                     .btn {
+                        width: 100%;
                         border: none;
                         font-weight: 600;
                         padding-top: 0.5vw;
