--- a/src/styles/other/ProductItem.scss
+++ b/src/styles/other/ProductItem.scss
@@ -122,5 +122,9 @@ $primary: #0095E9;
             opacity: 0.6;
             color: black;
         }
+
+        .desc_box {
+            border: solid 1px rgb(176, 176, 176);
+        }
     }
 }
