--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -230,27 +230,97 @@ $primary: #0095E9;
             }
 
             .catalog_bar {
-                top: 3.5vw;
+                top: 0;
+                left: 0;
                 z-index: 10;
-                width: 230%;
+                width: 100%;
+                height: 100%;
                 display: flex;
                 overflow: auto;
-                max-height: 50vh;
-                position: absolute;
-                flex-direction: column;
-                background-color: $primary;
+                position: fixed;
+                background-color: white;
+                justify-content: space-between;
 
-                @media (max-width:767px) {
-                    top: 8.5vw;
-                    max-height: 60vh;
+                .close_icn {
+                    top: 1.5vw;
+                    right: 1.2vw;
+                    width: 1.5vw;
+                    cursor: pointer;
+                    position: absolute;
+
+                    @media (max-width:767px) {
+                        top: 2vw;
+                        right: 2vw;
+                        width: 3.5vw;
+                    }
+                }
+
+                .left {
+                    width: 30%;
+                    overflow: auto;
+                    max-height: 100vh;
+
+                    @media (max-width:767px) {
+                        width: 49%;
+                    }
+                }
+
+                .right {
+                    width: 68%;
+                    display: grid;
+                    overflow: auto;
+                    align-items: start;
+                    max-height: 100vh;
+                    border-left: solid 1px grey;
+                    grid-template-columns: repeat(3, 3fr);
+
+                    @media (max-width:767px) {
+                        width: 49%;
+                        grid-template-columns: repeat(1, 1fr);
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: flex-start;
+                    }
+
+                    .prod_img {
+                        max-width: 100%;
+                        min-width: 100%;
+                        max-height: 5vw;
+                        min-height: 5vw;
+                        object-fit: contain;
+
+                        @media (max-width:767px) {
+                            display: none;
+                            max-height: 15vw;
+                            min-height: 15vw;
+                        }
+                    }
+
+                    .text {
+                        color: black;
+                        text-align: center;
+
+                        @media (max-width:767px) {
+                            font-size: 3vw;
+                            text-align: left;
+                        }
+                    }
+
+                    .prod {
+                        display: flex;
+                        text-decoration: none;
+                        flex-direction: column;
+                        border: solid 1px grey;
+                    }
                 }
 
                 .bar_link {
                     display: flex;
-                    color: white;
+                    color: black;
+                    text-align: left;
                     padding: 0.5vw 1vw;
                     flex-direction: column;
-                    border-bottom: solid 1px rgba(255, 255, 255, 0.328);
+                    border-bottom: solid 1px rgb(210, 210, 210);
 
                     // &:hover {
                     //     color: $primary;
@@ -271,6 +341,12 @@ $primary: #0095E9;
                         .icn1 {
                             max-width: 1.2vw;
                             min-width: 1.2vw;
+
+                            @media (max-width:767px) {
+                                display: none;
+                                max-width: 4vw;
+                                min-width: 4vw;
+                            }
                         }
 
                         .icn2 {
@@ -282,6 +358,11 @@ $primary: #0095E9;
                             -ms-transition: 0.2s;
                             -o-transition: 0.2s;
                             margin-right: 0.5vw;
+
+                            @media (max-width:767px) {
+                                max-width: 1.5vw;
+                                min-width: 1.5vw;
+                            }
                         }
                     }
 
@@ -293,11 +374,12 @@ $primary: #0095E9;
                         flex-direction: column;
 
                         .link {
-                            color: white;
+                            color: $primary;
+                            cursor: pointer;
 
                             &:hover {
-                                color: $primary;
-                                background-color: white;
+                                color: white;
+                                background-color: $primary;
                             }
                         }
                     }
@@ -306,11 +388,11 @@ $primary: #0095E9;
                 .active_catalog {
                     .parent {
                         .icn2 {
-                            transform: rotate(90deg);
-                            -webkit-transform: rotate(90deg);
-                            -moz-transform: rotate(90deg);
-                            -ms-transform: rotate(90deg);
-                            -o-transform: rotate(90deg);
+                            transform: rotate(180deg);
+                            -webkit-transform: rotate(180deg);
+                            -moz-transform: rotate(180deg);
+                            -ms-transform: rotate(180deg);
+                            -o-transform: rotate(180deg);
                         }
                     }
 
