--- a/src/styles/home/TopProducts.scss
+++ b/src/styles/home/TopProducts.scss
@@ -74,11 +74,11 @@ $primary: #0095E9;
                     }
 
                     .img {
-                        max-width: 80%;
-                        min-width: 80%;
+                        max-width: 100%;
+                        min-width: 100%;
                         max-height: 11vw;
                         min-height: 11vw;
-                        margin-right: 10%;
+                        margin-left: -20%;
                         object-fit: contain;
 
                         @media (max-width:767px) {
@@ -113,6 +113,11 @@ $primary: #0095E9;
                         text-decoration: none;
                         padding-bottom: 0.5vw;
                         background-color: #F5F5F7;
+
+                        &:hover {
+                            color: white;
+                            background-color: $primary;
+                        }
 
                         @media (max-width:767px) {
                             padding-top: 1.5vw;
