--- a/src/styles/other/FavouriteProducts.scss
+++ b/src/styles/other/FavouriteProducts.scss
@@ -1,3 +1,5 @@
+$primary: #0095E9;
+
 .FavouriteProducts {
     .wrapper {
         display: flex;
@@ -108,6 +110,11 @@
                         text-decoration: none;
                         padding-bottom: 0.5vw;
                         background-color: #F5F5F7;
+
+                        &:hover {
+                            color: white;
+                            background-color: $primary;
+                        }
 
                         @media (max-width:767px) {
                             padding-top: 1.5vw;
