--- a/src/styles/modals/Modal.scss
+++ b/src/styles/modals/Modal.scss
@@ -1,6 +1,7 @@
 // $primary: #086e81;
 // $primary: #00205B;
-$primary: #0095E9;
+// $primary: #0095E9;
+$primary: #3079BD;
 
 .Modal {
     top: 25%;
