--- a/src/styles/other/ProductItem.scss
+++ b/src/styles/other/ProductItem.scss
@@ -1,6 +1,7 @@
 // $primary: #086e81;
 // $primary: #00205B;
-$primary: #0095E9;
+// $primary: #0095E9;
+$primary: #3079BD;
 
 .ProductItem {
     .wrapper {
@@ -125,6 +126,11 @@ $primary: #0095E9;
 
         .desc_box {
             border: solid 1px rgb(176, 176, 176);
+        }
+
+        .lists {
+            display: grid;
+            grid-template-columns: repeat(2, 2fr);
         }
     }
 }
