--- a/src/styles/other/FavouriteProducts.scss
+++ b/src/styles/other/FavouriteProducts.scss
@@ -32,7 +32,8 @@ $primary: #3079BD;
                     position: relative;
                     align-items: flex-end;
                     flex-direction: column;
-                    background-color: #F5F5F7;
+                    background-color: white;
+                    border: solid 1px #F5F5F7;
 
                     .badge {
                         top: 0;
