--- a/src/styles/home/TopProducts.scss
+++ b/src/styles/home/TopProducts.scss
@@ -1,7 +1,11 @@
 // $primary: #086e81;
 // $primary: #00205B;
 // $primary: #0095E9;
-$primary: #3079BD;
+// $primary: #3079BD;
+// $primary: #0A92D0;
+// $primary: #4BAC3B;
+$primary: #459057;
+$secondary: rgb(162, 162, 162);
 
 .TopProducts {
     .wrapper {
