--- a/src/styles/home/Partners.scss
+++ b/src/styles/home/Partners.scss
@@ -1,7 +1,11 @@
 // $primary: #086e81;
 // $primary: #00205B;
 // $primary: #0095E9;
-$primary: #3079BD;
+// $primary: #3079BD;
+// $primary: #0A92D0;
+// $primary: #4BAC3B;
+$primary: #459057;
+$secondary: rgb(162, 162, 162);
 
 .Partners {
     .wrapper {
@@ -21,7 +25,7 @@ $primary: #3079BD;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                background-color: $primary;
+                background-color: $secondary;
 
                 @media (max-width:767px) {
                     height: 20vw;
