--- a/src/styles/home/Header.scss
+++ b/src/styles/home/Header.scss
@@ -4,7 +4,8 @@
 // $primary: #3079BD;
 // $primary: #0A92D0;
 // $primary: #4BAC3B;
-$primary: #459057;
+// $primary: #459057;
+$primary: #49C3F2;
 $secondary: rgb(162, 162, 162);
 
 .Header {
