--- a/src/styles/other/ProductItem.scss
+++ b/src/styles/other/ProductItem.scss
@@ -4,8 +4,10 @@
 // $primary: #3079BD;
 // $primary: #0A92D0;
 // $primary: #4BAC3B;
-$primary: #459057;
-$secondary: rgb(162, 162, 162);
+// $primary: #459057;
+// $secondary: rgb(162, 162, 162);
+$primary: #49C3F2;
+$secondary: #072B3D;
 
 .ProductItem {
     .wrapper {
