--- a/src/styles/home/Partners.scss
+++ b/src/styles/home/Partners.scss
@@ -6,8 +6,8 @@
 // $primary: #4BAC3B;
 // $primary: #459057;
 // $secondary: rgb(162, 162, 162);
-$primary: #49C3F2;
-$secondary: #072B3D;
+$secondary: #49C3F2;
+// $secondary: #072B3D;
 
 .Partners {
     .wrapper {
